# mfrmapp

./: 2026Raterbias10.txt  CHANGELOG.md  DEV_LOG.txt  MFRM_Facets分析作业提交方法及作业指导.docx  mfrm_app.py  pyproject.toml  render.yaml  心理测量进阶课堂评分汇总.xlsx
data/: ACTA投稿.docx  保研复习时间表.xlsx  国内学生审核.xlsx  处理后.xlsx  大创-2.docx  大创1.xlsx  宗祠文化研究第二批数据.xlsx  心理测量进阶课堂评分汇总.xlsx  汇总.xlsx  汇总数据最终版.xlsx  研究一数据.xlsx  访谈提纲及总结.docx  量表部分.docx
mfrm_app/: mfrm_app.py
mfrmapp/: .gitignore  2026Raterbias10.out.txt  DEV_LOG.txt  README.md  mfrm_app.py  mfrm_report.docx  mfrm_web.py  minifac_final_v2.py  pyproject.toml  render.yaml  requirements.txt
mfrmapp/mfrmapp/: README.md  pyproject.toml  render.yaml
mfrmapp/mfrmapp/src/mfrmapp/: __init__.py  cli.py  engine.py
mfrmapp/mfrmapp/src/mfrmapp/web/: app.py  app_gradio.py
mfrmapp/src/mfrmapp/: __init__.py  cli.py  engine.py  facets_out.py
mfrmapp/src/mfrmapp/web/: app.py  app_gradio.py  run.py  start_app.bat
mfrmapp/tests/: test_engine.py
mhrm_output/: excel_test.docx  fixed_test.xlsx  mfrm_output.xlsx  mfrmapp_test.xlsx
tests/: test_engine.py
