[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mfrmapp"
version = "1.0.12"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "openpyxl>=3.0",
    "gradio>=4.0",
    "python-pptx>=1.0.2",
]

[project.scripts]
mfrmapp-gradio = "mfrmapp.web.app_gradio:main"

[tool.hatch.build.targets.wheel]
packages = ["mfrmapp/mfrmapp/src/mfrmapp"]
