[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mfrmapp"
version = "0.8.0"
description = "MFRMSight — 多面Rasch模型分析工具"
readme = "README.md"
license = "MIT"
authors = [{name = "zgy78", email = "zgy78@ruc.edu.cn"}]
keywords = ["rasch", "mfrm", "psychometrics", "item-response-theory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "openpyxl>=3.0",
    "gradio>=4.0",
]
[project.optional-dependencies]
word = ["python-docx>=1.0"]
plot = ["matplotlib>=3.7"]

[project.scripts]
mfrmapp = "mfrmapp.cli:main"
mfrmapp-web = "mfrmapp.web.run:main"
mfrmapp-gradio = "mfrmapp.web.app_gradio:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mfrmapp"]
